==> QuantumLeaps/qpc/examples/zephyr/dpp/src/bsp.c <==
#include "qpc.h"
#include "dpp.h"
#include "bsp.h"
#include <zephyr/drivers/gpio.h>
#include <zephyr/sys/reboot.h>
#define LED0_NODE DT_ALIAS(led0)

void BSP_init(void) {
    int ret = gpio_pin_configure_dt(&l_led0, GPIO_OUTPUT_ACTIVE);
    Q_ASSERT(ret >= 0);

    k_timer_init(&QF_tick_timer, &QF_tick_function, NULL);

    //...
    BSP_randomSeed(1234U);

    if (QS_INIT((void *)0) == 0) { /* initialize the QS software tracing */
        Q_ERROR();
    }

    /* object dictionaries... */
    QS_OBJ_DICTIONARY(AO_Table);
    for (int n = 0; n < N_PHILO; ++n) {
        QS_OBJ_ARR_DICTIONARY(AO_Philo[n], n);
    }

    QS_OBJ_DICTIONARY(&timerID);
    QS_USR_DICTIONARY(PHILO_STAT);
    QS_USR_DICTIONARY(PAUSED_STAT);
    QS_USR_DICTIONARY(COMMAND_STAT);
    QS_USR_DICTIONARY(TEST_MSG);

    /* setup the QS filters... */
    QS_GLB_FILTER(QS_SM_RECORDS); /* state machine records */
    QS_GLB_FILTER(QS_AO_RECORDS); /* active object records */
    QS_GLB_FILTER(QS_UA_RECORDS); /* all user records */
    QS_GLB_FILTER(TEST_MSG);
}

void BSP_ledOn(void) {
    gpio_pin_set_dt(&l_led0, true);
}

void BSP_ledOff(void) {
    gpio_pin_set_dt(&l_led0, false);
}

Q_NORETURN Q_onAssert(char const * const module, int_t const loc) {
    /*
    * NOTE: add here your application-specific error handling
    */
    printk("\nASSERTION in %s:%d\n", module, loc);
    QS_ASSERTION(module, loc, 10000U); /* report assertion to QS */
#ifndef NDEBUG
    k_panic(); /* debug build: halt the system for error search... */
#else
    sys_reboot(SYS_REBOOT_COLD); /* release build: reboot the system */
#endif
}

uint8_t QS_onStartup(void const *arg) {
    static uint8_t qsTxBuf[1024]; /* buffer for QS-TX channel */
    static uint8_t qsRxBuf[256];  /* buffer for QS-RX channel */

    Q_REQUIRE(uart_dev != (struct device *)0);

    QS_initBuf  (qsTxBuf, sizeof(qsTxBuf));
    QS_rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    // configure interrupt and callback to receive data
    uart_irq_callback_user_data_set(uart_dev, &uart_cb, (void *)0);
    uart_irq_rx_enable(uart_dev);

    return 1U; /* return success */
}

void QS_onFlush(void) {
    uint16_t len = 0xFFFFU; /* to get as many bytes as available */
    uint8_t const *buf;
    while ((buf = QS_getBlock(&len)) != (uint8_t*)0) {
        for (; len != 0U; --len, ++buf) {
            uart_poll_out(uart_dev, *buf);
        }
        len = 0xFFFFU; /* to get as many bytes as available */
    }
}
