==> shengqiujin333/paida_f103/examples/arm-cm/stm32f4_nucleo_paida/qv/bsp.c <==
#include "qpc.h"
#include "blinky.h"
#include "bsp.h"
#include "stm32f4xx_hal.h"
#include "stm32f4xx.h"  /* CMSIS-compliant header file for the MCU used */
#define LED_GPIO_PORT     GPIOA
#define LED3_PIN          GPIO_PIN_5

void BSP_init(void) {
    GPIO_InitTypeDef GPIO_struct;

    /* NOTE: SystemInit() already called from the startup code
    *  but SystemCoreClock needs to be updated
    */
    HAL_Init();
    SystemClock_Config();
    SystemCoreClockUpdate();
    //HAL_UART_MspInit(USART1);
    MX_USART2_UART_Init();
    uint32_t tempsysclock,temphclk,temppclk1,temppclk2;
    tempsysclock = HAL_RCC_GetSysClockFreq();
    temphclk = HAL_RCC_GetHCLKFreq();
    temppclk1 = HAL_RCC_GetPCLK1Freq();
    temppclk2 = HAL_RCC_GetPCLK2Freq();
    /* configure the FPU usage by choosing one of the options... */
#if 1
    /* OPTION 1:
    * Use the automatic FPU state preservation and the FPU lazy stacking.
    *
    * NOTE:
    * Use the following setting when FPU is used in more than one task or
    * in any ISRs. This setting is the safest and recommended, but requires
    * extra stack space and CPU cycles.
    */
    FPU->FPCCR |= (1U << FPU_FPCCR_ASPEN_Pos) | (1U << FPU_FPCCR_LSPEN_Pos);
#else
    /* OPTION 2:
    * Do NOT to use the automatic FPU state preservation and
    * do NOT to use the FPU lazy stacking.
    *
    * NOTE:
    * Use the following setting when FPU is used in ONE task only and not
    * in any ISR. This setting is very efficient, but if more than one task
    * (or ISR) start using the FPU, this can lead to corruption of the
    * FPU registers. This option should be used with CAUTION.
    */
    FPU->FPCCR &= ~((1U << FPU_FPCCR_ASPEN_Pos) | (1U << FPU_FPCCR_LSPEN_Pos));
#endif

    /* Initialize thr port for the LEDs */
    __HAL_RCC_GPIOA_CLK_ENABLE();
    /* GPIO Configuration for the LEDs... */
    GPIO_struct.Mode  = GPIO_MODE_OUTPUT_PP;
    GPIO_struct.Pull = GPIO_PULLDOWN;
    GPIO_struct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;

    GPIO_struct.Pin = LED3_PIN;
    HAL_GPIO_Init(LED_GPIO_PORT, &GPIO_struct);
    HAL_GPIO_WritePin(LED_GPIO_PORT,LED3_PIN,GPIO_PIN_SET);

    /* seed the random number generator */
    BSP_randomSeed(1234U);
    //printf("hello world\r\n");
    if (QS_INIT((void *)0) == 0U) { /* initialize the QS software tracing */
        Q_ERROR();
    }
    QS_OBJ_DICTIONARY(&l_SysTick);
    QS_USR_DICTIONARY(PHILO_STAT);
    QS_USR_DICTIONARY(COMMAND_STAT);

    /* setup the QS filters... */
    QS_GLB_FILTER(QS_SM_RECORDS); /* state machine records */
    QS_GLB_FILTER(QS_AO_RECORDS); /* active object records */
    QS_GLB_FILTER(QS_UA_RECORDS); /* all user records */
}

void BSP_ledon(void) {
    HAL_GPIO_WritePin(LED_GPIO_PORT,LED3_PIN,GPIO_PIN_SET);
}

void BSP_ledoff(void) {
    HAL_GPIO_WritePin(LED_GPIO_PORT,LED3_PIN,GPIO_PIN_RESET);
}

Q_NORETURN Q_onAssert(char_t const * const module, int_t const loc) {
    /*
    * NOTE: add here your application-specific error handling
    */
    (void)module;
    (void)loc;
    QS_ASSERTION(module, loc, 10000U); /* report assertion to QS */
    NVIC_SystemReset();
}

uint8_t QS_onStartup(void const *arg) {
    static uint8_t qsBuf[2*1024]; /* buffer for QS-TX channel */
    static uint8_t qsRxBuf[100];  /* buffer for QS-RX channel */
    GPIO_InitTypeDef GPIO_struct;
    USART_InitTypeDef USART_struct;

    (void)arg; /* avoid the "unused parameter" compiler warning */
    QS_initBuf(qsBuf, sizeof(qsBuf));
    QS_rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    /* enable peripheral clock for USART2 */

    QS_tickPeriod_ = SystemCoreClock / BSP_TICKS_PER_SEC;
    QS_tickTime_ = QS_tickPeriod_; /* to start the timestamp at zero */

    return 1U; /* return success */
}

void QS_onFlush(void) {
    uint16_t b;

    QF_INT_DISABLE();
    while ((b = QS_getByte()) != QS_EOD) { /* while not End-Of-Data... */
        QF_INT_ENABLE();
        while ((USART2->SR & USART_FLAG_TXE) == 0) { /* while TXE not empty */
        }
        USART2->DR = (b & 0xFFU); /* put into the DR register */
        QF_INT_DISABLE();
    }
    QF_INT_ENABLE();
}
